<resources>
    <string name="app_name">android_fundamental</string>
    <string name="simple">Simple</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subject">subject</string>
    <string name="divider">divider</string>
    <string name="show_bottom_sheet">Show Bottom sheet</string>
    <string name="start_fragment">start fragment</string>
    <string name="stop_fragment">stop fragment</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="lifecycle">LifeCycle</string>
    <string name="change_backlight_light">Change backlight light</string>
    <string name="simple_recycler">Simple Recycler</string>
    <string name="horizontal">Horizontal</string>
    <string name="send_email">send Email</string>
    <string name="services">Services</string>
    <string name="shared_preferences">Shared preferences</string>
    <string name="view_binding">View Binding</string>
    <string name="data_binding">Data Binding</string>
    <string name="mvvm_live_data">Mvvm Live_Data</string>
    <string name="start_background_service">Start Background Service</string>
    <string name="start_foreground_service">Start Foreground Service</string>
    <string name="stop_background_service">Stop Background Service</string>
    <string name="stop_foreground_service">Stop Foreground Service</string>
    <string name="background_service_status">Background Service Status</string>
    <string name="foreground_service_status">Foreground service status</string>
    <string name="start_on_off_screen_service">Start On Off Screen Service</string>
    <string name="stop_on_off_screen_service">Stop On Off Screen Service</string>
    <string name="on_off_screen_status">On Off screen status</string>
    <string name="transparent_status">Transparent status</string>
    <string name="start_transparent_service">Start transparent Service</string>
    <string name="stop_transparent_service">Stop transparent Service</string>
    <string name="read_data">Read Data</string>
    <string name="write_data">Write Data</string>
    <string name="room">Room</string>
    <string name="password">password</string>
    <string name="load_from_database">load From DataBase</string>
    <string name="save_to_database">Save To DataBase</string>
    <string name="username">UserName</string>
    <string name="lastname">LastName</string>
    <string name="phone_number">PhoneNumber</string>
    <string name="view_to_model_model_to_view">View to Model- Model to View</string>
    <string name="view_tag_id">View tag id</string>
    <string name="set_view_to_model">Set View To Model</string>
    <string name="set_model_to_view">Set Model To View</string>
    <string name="title_activity_compose">ComposeActivity</string>
</resources>