<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".AndroidFundamentalActivity">

<Button
    android:id="@+id/btn_main_recycler"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/recyclerview"/>

    <Button
        android:id="@+id/btn_lifecycle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lifecycle"/>

    <Button
        android:id="@+id/btn_backlight_change_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_backlight_light"/>

    <Button
        android:id="@+id/btn_bottom_sheet_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_bottom_sheet"/>

    <Button
        android:id="@+id/btn_send_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_email"/>

    <Button
        android:id="@+id/btn_services"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/services"/>

    <Button
        android:id="@+id/btn_shared_preferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shared_preferences"/>

    <Button
        android:id="@+id/btn_view_binding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_binding"/>

    <Button
        android:id="@+id/btn_data_binding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_binding"/>

    <Button
        android:id="@+id/btn_mvvm_live_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mvvm_live_data"/>

    <Button
        android:id="@+id/btn_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room"/>

</LinearLayout>